Alteração na cor da tabela

--- a/src/components/TableDefault/style.css
+++ b/src/components/TableDefault/style.css
@@ -15,7 +15,7 @@
 .container-table td {
     margin-bottom: 10px;
     padding: 10px;
-    background-color: #03023D;
+    background-color: #0B0A20;
     font-weight: 300;
     text-align: left;
     
